--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,47 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+ 
+body{
+    background-color: #202124;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+.app{
+   display: flex;
+   padding: 30px;
+   align-items: center; /* Center vertically */
+   justify-content: center; /* Center horizontally */
+  
 }
+
+.game{
+   width: 560px;
+   height: 560px;
+   display: flex;
+   flex-wrap: wrap;
+   background-color: #325874;
+   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Shadow properties */
+   border-radius: 2%;
+}
+
+
+.game img {
+   width: 70px;
+   height: 70px;
+}
+
+.score-board {
+   background-color: #f0f0f0;
+   border-radius: 8px;
+   padding: 10px;
+   text-align: center;
+   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+   /* Additional styling for the score board */
+ }
+ 
+ .score-board h2 {
+   margin: 0;
+   font-size: 24px;
+   color: #333;
+   /* Additional styling for the score text */
+ }
+ 
+ 
